# zhixiang

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-MIT  readme.md
docs/: format.md
examples/: load_binary.rs  pack.rs
src/: constants.rs  lib.rs  load.rs  pack.rs  types.rs
tests/: 0_1_0.zbox
tests/ppp/: 测试.txt
tests/root/: Lorem Ipsum.txt
