[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "zhixiang"
repository = "https://github.com/Icemic/zhixiang"
version = "0.1.0"

[features]
async = ["tokio"]

[dependencies]
anyhow = "1"
byteorder = "1"
log = "0.4"
num_enum = "0.7"
tokio = {version = "1", optional = true}
